[package]
name = "uninitialized"
version = "0.0.1"
authors = ["arcnmx"]

description = "Opt-in unsafe uninitialized memory"
keywords = ["uninitialized", "zeroed", "memory", "unsafe", "nue"]

documentation = "http://arcnmx.github.io/uninitialized-rs/uninitialized"
repository = "https://github.com/arcnmx/uninitialized-rs"
readme = "README.md"
license = "MIT"

[features]
uninitialized = []
